fix on OnboardingServiceImpl and OnboardingServiceTest, added two constants in OnboardingWorkflowConstants